# trim-txt

./: .gitignore  Cargo.toml
src/: main.rs
