[package]
name = "trim-txt"
version = "0.1.1"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"

[profile.release]
panic = 'abort'
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size

# `cargo build --target=i686-pc-windows-msvc --release`